# easyLog

./: .gitignore  Easylog.hpp  Easyog.cpp  Easyog.hpp  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  main.yml
libBuild/: CMakeLists.txt  EasyLog.cpp  EasyLog.hpp
tests/: CMakeLists.txt  fmt.cxx  thread_test.cxx
